# opengl-water-simulation

./: CMakeLists.txt  README.md
include/: camera.hpp  grid.hpp  shader_utils.hpp  simulation.hpp
shaders/: drop.frag  drop.vert  land.frag  land.vert  sky.frag  sky.vert  wave.frag  wave.vert
src/: camera.cpp  grid.cpp  main.cpp  shader_utils.cpp  simulation.cpp
